// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ProjectCard snapshot matches snapshot for red health 1`] = `
<div
  class="px-6 py-4 hover:bg-gray-50"
>
  <div
    class="flex items-center justify-between"
  >
    <div
      class="flex items-center space-x-3 min-w-0 flex-1"
    >
      <div
        class="w-3 h-3 rounded-full flex-shrink-0 bg-red-500"
      />
      <div
        class="min-w-0 flex-1"
      >
        <h4
          class="text-sm font-medium text-gray-900 truncate"
        >
          At Risk Project
        </h4>
        <p
          class="text-sm text-gray-500 capitalize"
        >
          active
        </p>
      </div>
    </div>
    <div
      class="text-right flex-shrink-0"
    >
      <p
        class="text-sm font-medium text-gray-900"
      >
        $
        80,000
      </p>
      <p
        class="text-xs text-gray-500"
      >
        1/15/2024
      </p>
    </div>
  </div>
</div>
`;

exports[`ProjectCard snapshot matches snapshot for yellow health 1`] = `
<div
  class="px-6 py-4 hover:bg-gray-50"
>
  <div
    class="flex items-center justify-between"
  >
    <div
      class="flex items-center space-x-3 min-w-0 flex-1"
    >
      <div
        class="w-3 h-3 rounded-full flex-shrink-0 bg-yellow-500"
      />
      <div
        class="min-w-0 flex-1"
      >
        <h4
          class="text-sm font-medium text-gray-900 truncate"
        >
          Residential Tower A
        </h4>
        <p
          class="text-sm text-gray-500 capitalize"
        >
          active
        </p>
      </div>
    </div>
    <div
      class="text-right flex-shrink-0"
    >
      <p
        class="text-sm font-medium text-gray-900"
      >
        $
        200,000
      </p>
      <p
        class="text-xs text-gray-500"
      >
        1/15/2024
      </p>
    </div>
  </div>
</div>
`;

exports[`ProjectCard snapshot matches snapshot with fixture 1`] = `
<div
  class="px-6 py-4 hover:bg-gray-50"
>
  <div
    class="flex items-center justify-between"
  >
    <div
      class="flex items-center space-x-3 min-w-0 flex-1"
    >
      <div
        class="w-3 h-3 rounded-full flex-shrink-0 bg-green-500"
      />
      <div
        class="min-w-0 flex-1"
      >
        <h4
          class="text-sm font-medium text-gray-900 truncate"
        >
          Office Complex Phase 1
        </h4>
        <p
          class="text-sm text-gray-500 capitalize"
        >
          active
        </p>
      </div>
    </div>
    <div
      class="text-right flex-shrink-0"
    >
      <p
        class="text-sm font-medium text-gray-900"
      >
        $
        150,000
      </p>
      <p
        class="text-xs text-gray-500"
      >
        1/15/2024
      </p>
    </div>
  </div>
</div>
`;
